@@ -1,5 +1,5 @@
 #
-#ident $Id: configure.in,v 1.8 2004/04/03 07:18:21 raven Exp $
+#ident $Id: configure.in,v 1.9 2004/04/03 12:51:51 raven Exp $
 #
 # configure.in for the autofs daemon
 
@@ -143,6 +143,7 @@ if test $gcc_supports_pie = yes ; then
 	DAEMON_CFLAGS="-fpie"
 	DAEMON_LDFLAGS="-pie"
 fi
+rm -f pietest.c
 AC_SUBST(DAEMON_CFLAGS)
 AC_SUBST(DAEMON_LDFLAGS)
 
